docs(storybook): added a story for the logo component

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "run-s lint:* coverage",
     "coverage": "nyc run-s tests:unit",
     "commitmsg": "validate-commit-msg",
-    "precommit": "npm test"
+    "precommit": "npm test",
+    "start": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "config": {
     "commitizen": {
@@ -26,6 +28,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@storybook/react": "3.1.8",
     "@travi/any": "1.2.2",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
