--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "commitmsg": "validate-commit-msg",
     "precommit": "npm test",
     "start": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy": "gh-pages --silent -r \"https://$GH_TOKEN@github.com/dsmjs/components.git\" -d storybook-static/"
   },
   "config": {
     "commitizen": {
