--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chai": "4.0.2",
     "cz-conventional-changelog": "2.0.0",
     "enzyme": "2.9.1",
+    "gh-pages": "1.0.0",
     "globstar": "1.0.0",
     "husky": "0.14.3",
     "markdownlint-cli": "0.3.1",
