ci(deploy): added a name for the bot to the git commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
 before_deploy:
   - npm run build-storybook
   - git config --global user.email "$GIT_EMAIL"
+  - git config --global user.email "dsmJS Bot"
 deploy:
   - skip_cleanup: true
     provider: script
