ci(codecov): added code coverage reporting to codecov

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tests:unit": "mocha --recursive src/**/test.js",
     "test": "run-s lint:* coverage",
     "coverage": "nyc run-s tests:unit",
+    "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "commitmsg": "validate-commit-msg",
     "precommit": "npm test",
     "start": "start-storybook -p 6006",
@@ -35,6 +36,7 @@
     "babel-preset-react": "6.24.1",
     "babel-register": "6.24.1",
     "chai": "4.0.2",
+    "codecov": "2.2.0",
     "cz-conventional-changelog": "2.0.0",
     "enzyme": "2.9.1",
     "gh-pages": "1.0.0",
