feat(header-bars): added the static header bars

--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -12,5 +12,13 @@
       }
     ],
     "react"
+  ],
+  "plugins": [
+    [
+      "transform-object-rest-spread",
+      {
+        "useBuiltIns": true
+      }
+    ]
   ]
 }
