--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": [["env", {"targets": {"node": "current"}}], "react"]
+  "presets": [["env", {"targets": {"node": "current"}}], "react"],
+  "plugins": [["transform-object-rest-spread", { "useBuiltIns": true }]]
 }
