--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@storybook/react": "3.1.8",
     "@travi/any": "1.2.2",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-register": "6.24.1",
