--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "access": "public"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "3.1.9",
+    "@storybook/addon-links": "3.1.6",
     "@storybook/react": "3.1.9",
     "@travi/any": "1.3.0",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
