refactor(glamorous): used glamorous to style the divs for each colored bar
this was to get some simple usages included before getting deeper into any more complex cases

--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
   "peerDependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
+  },
+  "dependencies": {
+    "glamorous": "4.1.0"
   }
 }
