--- a/package.json
+++ b/package.json
@@ -32,29 +32,29 @@
     "access": "public"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "3.3.0-alpha.1",
-    "@storybook/addon-links": "3.2.6",
-    "@storybook/react": "3.2.8",
-    "@travi/any": "1.4.3",
+    "@storybook/addon-actions": "3.2.17",
+    "@storybook/addon-links": "3.2.17",
+    "@storybook/react": "3.2.17",
+    "@travi/any": "1.6.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.6.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-register": "6.26.0",
     "chai": "4.1.2",
-    "codecov": "2.3.0",
-    "cz-conventional-changelog": "2.0.0",
+    "codecov": "3.0.0",
+    "cz-conventional-changelog": "2.1.0",
     "enzyme": "2.9.1",
     "gh-pages": "1.1.0",
     "globstar": "1.0.0",
-    "greenkeeper-lockfile": "1.9.0",
+    "greenkeeper-lockfile": "1.12.0",
     "husky": "0.14.3",
-    "markdownlint-cli": "0.3.1",
-    "mocha": "3.5.3",
-    "npm-run-all": "4.1.1",
-    "nyc": "11.2.1",
+    "markdownlint-cli": "0.5.0",
+    "mocha": "4.0.1",
+    "npm-run-all": "4.1.2",
+    "nyc": "11.3.0",
     "react": "15.6.2",
     "react-dom": "15.6.2",
-    "react-test-renderer": "16.0.0",
+    "react-test-renderer": "16.2.0",
     "validate-commit-msg": "2.14.0"
   },
   "peerDependencies": {
@@ -62,6 +62,6 @@
     "react-dom": "^15.6.1"
   },
   "dependencies": {
-    "glamorous": "4.9.6"
+    "glamorous": "4.11.0"
   }
 }
