--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "bugs": "https://github.com/dsmjs/components/issues",
   "homepage": "https://github.com/dsmjs/components#readme",
   "scripts": {
+    "clean": "rimraf lib/",
     "lint:md": "globstar --node -- markdownlint **/*.md",
     "tests:unit": "mocha --recursive src/**/test.js",
     "test": "run-s lint:* coverage",
@@ -18,6 +19,8 @@
     "commitmsg": "validate-commit-msg",
     "precommit": "npm test",
     "start": "start-storybook -p 6006",
+    "build:js": "rollup -c",
+    "build": "run-s clean build:*",
     "build-storybook": "build-storybook",
     "deploy": "gh-pages -r \"https://$GH_TOKEN@github.com/dsmjs/components.git\" -d storybook-static/",
     "greenkeeper:update-lockfile": "greenkeeper-lockfile-update",
@@ -37,6 +40,7 @@
     "@storybook/react": "3.2.17",
     "@travi/any": "1.6.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.10",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-register": "6.26.0",
@@ -55,6 +59,10 @@
     "react": "15.6.2",
     "react-dom": "15.6.2",
     "react-test-renderer": "16.2.0",
+    "rollup": "0.52.1",
+    "rollup-plugin-babel": "3.0.2",
+    "rollup-plugin-json": "2.3.0",
+    "rollup-plugin-node-resolve": "3.0.0",
     "validate-commit-msg": "2.14.0"
   },
   "peerDependencies": {
