--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "rollup-plugin-babel": "3.0.2",
     "rollup-plugin-json": "2.3.0",
     "rollup-plugin-node-resolve": "3.0.0",
+    "semantic-release": "8.2.0",
     "validate-commit-msg": "2.14.0"
   },
   "peerDependencies": {
