ci(publish): added the npm script for semantic-release

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build-storybook": "build-storybook",
     "deploy": "gh-pages -r \"https://$GH_TOKEN@github.com/dsmjs/components.git\" -d storybook-static/",
     "greenkeeper:update-lockfile": "greenkeeper-lockfile-update",
-    "greenkeeper:upload-lockfile": "greenkeeper-lockfile-upload"
+    "greenkeeper:upload-lockfile": "greenkeeper-lockfile-upload",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "config": {
     "commitizen": {
