--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "deploy": "gh-pages -r \"https://$GH_TOKEN@github.com/dsmjs/components.git\" -d storybook-static/",
     "greenkeeper:update-lockfile": "greenkeeper-lockfile-update",
     "greenkeeper:upload-lockfile": "greenkeeper-lockfile-upload",
+    "prepublish": "run-s build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "config": {
