chore(commitlint): migrated from validate-commit-msg to commitlint

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "run-s lint:* coverage",
     "coverage": "nyc run-s tests:unit",
     "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
-    "commitmsg": "validate-commit-msg",
+    "commitmsg": "commitlint -e",
     "precommit": "npm test",
     "start": "start-storybook -p 6006",
     "build:js": "rollup -c",
@@ -50,6 +50,7 @@
     "babel-register": "6.26.0",
     "chai": "4.1.2",
     "codecov": "3.0.0",
+    "commitlint-config-dsmjs": "1.0.2",
     "cz-conventional-changelog": "2.1.0",
     "enzyme": "2.9.1",
     "gh-pages": "1.1.0",
