ci(semantic-release): updated the publish command
this should align with the recent semantic-release upgrade guide

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "greenkeeper:update-lockfile": "greenkeeper-lockfile-update",
     "greenkeeper:upload-lockfile": "greenkeeper-lockfile-upload",
     "prepublish": "run-s build",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release"
   },
   "config": {
     "commitizen": {
