--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@storybook/addon-links": "3.3.9",
     "@storybook/react": "3.3.9",
     "@travi/any": "1.6.0",
+    "babel-core": "6.26.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.12",
     "babel-preset-env": "1.6.1",
