--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "codecov": "3.0.0",
     "commitlint-config-dsmjs": "1.0.2",
     "cz-conventional-changelog": "2.1.0",
-    "enzyme": "2.9.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "gh-pages": "1.1.0",
     "globstar": "1.0.0",
     "greenkeeper-lockfile": "1.12.0",
