chore(dependencies): updated a few packages

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "3.3.12",
-    "@storybook/addon-links": "3.3.9",
-    "@storybook/react": "3.3.11",
+    "@storybook/addon-links": "3.3.12",
+    "@storybook/react": "3.3.12",
     "@travi/any": "1.7.2",
     "babel-core": "6.26.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
@@ -59,7 +59,7 @@
     "gh-pages": "1.1.0",
     "globstar": "1.0.0",
     "greenkeeper-lockfile": "1.13.2",
-    "husky": "0.14.3",
+    "husky": "0.15.0-rc.8",
     "markdownlint-cli": "0.7.1",
     "mocha": "5.0.0",
     "npm-run-all": "4.1.2",
