ci(install): made installation method conditional
node > v10.3 defaults to `npm ci` on travis, which fails when the lockfile is not in sync. this
means that we need to instead use `npm i` on greenkeeper branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ notifications:
 branches:
   except:
   - "/^v\\d+\\.\\d+\\.\\d+$/"
+install: case $TRAVIS_BRANCH in greenkeeper*) npm i;; *) npm ci;; esac;
 after_install: npm ls >/dev/null
 before_script: npm run greenkeeper:update-lockfile
 before_deploy:
