--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "rollup-plugin-babel": "3.0.7",
     "rollup-plugin-json": "3.0.0",
     "rollup-plugin-node-resolve": "3.3.0",
+    "storybook-router": "0.3.4",
     "validate-commit-msg": "2.14.0"
   },
   "peerDependencies": {
