--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ deploy:
 - provider: script
   skip_cleanup: true
   script: npm run deploy
-after_success: npm run coverage:report
+after_success:
+- npm run coverage:report
+- npm run snapshot
 after_script: npm run greenkeeper:upload-lockfile
 env:
   global:
