--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "@storybook/addon-links": "3.4.10",
     "@storybook/react": "3.4.10",
     "@travi/any": "1.7.5",
-    "@travi/eslint-config-travi": "1.6.15",
+    "@travi/eslint-config-travi": "^1.6.15",
     "babel-core": "6.26.3",
     "babel-plugin-inline-react-svg": "^0.5.4",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.14",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-register": "6.26.0",
