--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   "dependencies": {
     "glamor": "2.20.40",
     "glamorous": "4.13.1",
-    "prop-types": "15.6.2"
+    "prop-types": "15.6.2",
+    "react-simple-icons": "^1.0.0-beta.5"
   }
 }
