--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:md": "globstar --node -- markdownlint **/*.md",
     "lint:js": "eslint . .storybook --cache",
     "tests:unit": "mocha --recursive test/unit/**/*-test.js",
-    "test": "run-s lint:* coverage",
+    "test": "run-s lint:* coverage build",
     "coverage": "nyc run-s tests:unit",
     "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "commitmsg": "commitlint -e",
@@ -28,7 +28,7 @@
     "build-storybook": "build-storybook",
     "snapshot": "build-storybook && percy-storybook --widths=320,1280",
     "deploy": "gh-pages -r \"https://$GH_TOKEN@github.com/dsmjs/components.git\" -d storybook-static/",
-    "prepublishOnly": "run-s build"
+    "prepack": "run-s build"
   },
   "config": {
     "commitizen": {
@@ -48,31 +48,31 @@
     "babel-core": "6.26.3",
     "babel-plugin-inline-react-svg": "^0.5.4",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.15",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.18",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-register": "6.26.0",
-    "chai": "4.1.2",
+    "chai": "^4.2.0",
     "codecov": "3.1.0",
     "commitlint-config-dsmjs": "1.0.3",
     "cz-conventional-changelog": "2.1.0",
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.6.0",
-    "gatsby": "1.9.277",
-    "gatsby-link": "1.6.46",
+    "gatsby": "^1.9.277",
+    "gatsby-link": "^1.6.46",
     "gh-pages": "2.0.1",
     "globstar": "1.0.0",
     "husky": "1.1.0",
     "markdownlint-cli": "0.13.0",
     "mocha": "5.2.0",
     "npm-run-all": "4.1.3",
-    "nyc": "12.0.2",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
-    "react-test-renderer": "16.4.2",
-    "rollup": "0.66.1",
+    "nyc": "^13.0.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-test-renderer": "^16.5.2",
+    "rollup": "^0.66.4",
     "rollup-plugin-auto-external": "2.0.0",
-    "rollup-plugin-babel": "3.0.7",
+    "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-resolve": "3.4.0",
     "storybook-router": "0.3.4",
