--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "@percy-io/percy-storybook": "2.1.0",
     "@storybook/addon-actions": "4.0.0",
     "@storybook/addon-links": "4.0.0",
-    "@storybook/react": "4.0.0",
+    "@storybook/react": "^4.1.12",
     "@travi/any": "1.8.5",
-    "@travi/eslint-config-travi": "^1.6.15",
+    "@travi/eslint-config-travi": "^1.8.0",
     "babel-core": "6.26.3",
     "babel-plugin-inline-react-svg": "^0.5.4",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
@@ -59,7 +59,7 @@
     "cz-conventional-changelog": "2.1.0",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.9.1",
-    "gatsby": "^2.0.25",
+    "gatsby": "^2.1.4",
     "gatsby-link": "^2.0.4",
     "gh-pages": "2.0.1",
     "globstar": "1.0.0",
@@ -67,7 +67,7 @@
     "markdownlint-cli": "0.13.0",
     "mocha": "6.0.0",
     "npm-run-all": "4.1.5",
-    "nyc": "^13.0.1",
+    "nyc": "^13.3.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-test-renderer": "^16.5.2",
