--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -1,7 +1,7 @@
 {
-  "presets": [["env", {"targets": {"browsers": ["last 2 versions", "safari >= 7"]}}], "react"],
+  "presets": [["@babel/env", {"targets": {"browsers": ["last 2 versions", "safari >= 7"]}}], "@babel/react"],
   "plugins": [
-    ["transform-object-rest-spread", {"useBuiltIns": true}],
+    ["@babel/proposal-object-rest-spread", {"useBuiltIns": true}],
     "babel-plugin-inline-react-svg"
   ]
 }
