--- a/package.json
+++ b/package.json
@@ -40,19 +40,18 @@
     "access": "public"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@percy-io/percy-storybook": "2.1.0",
     "@storybook/addon-actions": "4.1.12",
     "@storybook/addon-links": "4.1.12",
     "@storybook/react": "^4.1.12",
     "@travi/any": "1.8.5",
     "@travi/eslint-config-travi": "^1.8.0",
-    "babel-core": "6.26.3",
-    "babel-plugin-inline-react-svg": "^0.5.4",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.18",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-register": "6.26.0",
+    "babel-plugin-inline-react-svg": "^1.0.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "chai": "^4.2.0",
     "codecov": "3.2.0",
     "commitlint-config-dsmjs": "1.0.6",
@@ -72,7 +71,7 @@
     "react-test-renderer": "^16.8.2",
     "rollup": "^1.2.2",
     "rollup-plugin-auto-external": "2.0.0",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-json": "3.1.0",
     "rollup-plugin-node-resolve": "4.0.0",
     "storybook-router": "0.3.4",
