--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,1 +1,12 @@
-extends: '@travi/travi/rules/es6'
+extends:
+  - '@dsmjs'
+  - '@dsmjs/react'
+
+overrides:
+  - files: '**/*-test.js'
+    extends: '@dsmjs/mocha'
+  - files: '.storybook/*.js'
+    rules:
+      import/no-extraneous-dependencies:
+        - error
+        - devDependencies: true
