build(eslint): removed the redundant mocha rules
now that they are included in the shareable config

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,7 +1,4 @@
 extends:
   - '@dsmjs'
+  - '@dsmjs/mocha'
   - '@dsmjs/react'
-
-overrides:
-  - files: '**/*-test.js'
-    extends: '@dsmjs/mocha'
