build(babel-preset): converted the babelrc to use the org preset
still need to switch the storybook babelrc and the rollup config, but both of those need
configuration for browser targets

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,1 @@
-{
-  "presets": [["@babel/env", {"targets": {"node": "current"}}], "@babel/react"],
-  "plugins": [
-    ["@babel/proposal-object-rest-spread", {"useBuiltIns": true}],
-    "babel-plugin-inline-react-svg"
-  ]
-}
+{"presets": [["@dsmjs", {"react":  true}]]}
