docs(storybook): switched the babel config to use the dsmjs org config
and got the rest of storybook back to working and upgraded

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "lint:md": "globstar --node -- markdownlint **/*.md",
     "lint:js": "eslint . .storybook --cache",
     "tests:unit": "mocha --recursive test/unit/**/*-test.js",
-    "test": "run-s lint:* coverage build",
+    "test": "npm-run-all --print-label --parallel lint:* --sequential coverage --parallel build build-storybook",
     "coverage": "nyc run-s tests:unit",
     "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "commitmsg": "commitlint -e",
     "precommit": "npm test",
-    "start": "start-storybook -p 6006",
-    "build:js": "rollup -c",
+    "start": "start-storybook --port 6006 --ci",
+    "build:js": "rollup --config",
     "build": "run-s clean build:*",
     "build-storybook": "build-storybook",
     "snapshot": "build-storybook && percy-storybook --widths=320,1280",
@@ -47,10 +47,11 @@
     "@dsmjs/eslint-config-mocha": "1.0.1",
     "@dsmjs/eslint-config-react": "1.1.2",
     "@percy-io/percy-storybook": "2.1.0",
-    "@storybook/addon-actions": "5.0.9",
-    "@storybook/addon-links": "5.0.9",
-    "@storybook/react": "^5.0.9",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/react": "^5.0.11",
     "@travi/any": "2.0.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-inline-react-svg": "^1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "chai": "^4.2.0",
