--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -1,7 +1,3 @@
 {
-  "presets": [["@babel/env", {"targets": {"browsers": ["last 2 versions", "safari >= 7"]}}], "@babel/react"],
-  "plugins": [
-    ["@babel/proposal-object-rest-spread", {"useBuiltIns": true}],
-    "babel-plugin-inline-react-svg"
-  ]
+  "presets": [["@dsmjs", {"targets": {"browser": true}, "browser": true, "react": true}]]
 }
