chore(lint-md): switched from markdownlint to remark
so we can use our shareable config

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://github.com/dsmjs/components#readme",
   "scripts": {
     "clean": "rimraf lib/",
-    "lint:md": "globstar --node -- markdownlint **/*.md",
+    "lint:md": "remark --frail .",
     "lint:js": "eslint . .storybook --cache",
     "tests:unit": "mocha --recursive src/**/*-test.js",
     "test": "npm-run-all --print-label --parallel lint:* --sequential coverage --parallel build build-storybook",
@@ -46,6 +46,7 @@
     "@dsmjs/eslint-config": "1.0.2",
     "@dsmjs/eslint-config-mocha": "1.0.1",
     "@dsmjs/eslint-config-react": "1.1.2",
+    "@dsmjs/remark-preset-lint": "1.0.0-beta.3",
     "@percy-io/percy-storybook": "2.1.0",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-links": "^5.0.11",
@@ -60,15 +61,15 @@
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "gh-pages": "2.0.1",
-    "globstar": "1.0.0",
     "husky": "2.4.1",
-    "markdownlint-cli": "0.17.0",
     "mocha": "6.1.4",
     "npm-run-all": "4.1.5",
     "nyc": "^14.0.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-test-renderer": "^16.8.2",
+    "remark": "^10.0.1",
+    "remark-cli": "^6.0.1",
     "rollup": "^1.2.2",
     "rollup-plugin-auto-external": "2.0.0",
     "rollup-plugin-babel": "^4.3.2",
