fix(dependencies): bumped a bunch of packages, including gatsby-link

--- a/package.json
+++ b/package.json
@@ -40,17 +40,17 @@
     "access": "public"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "@dsmjs/babel-preset": "^1.0.11",
+    "@babel/core": "^7.6.2",
+    "@babel/register": "^7.6.2",
+    "@dsmjs/babel-preset": "^1.0.13",
     "@dsmjs/eslint-config": "1.0.23",
     "@dsmjs/eslint-config-mocha": "1.0.5",
-    "@dsmjs/eslint-config-react": "1.1.12",
+    "@dsmjs/eslint-config-react": "^1.1.13",
     "@dsmjs/remark-preset-lint": "1.0.1",
     "@percy-io/percy-storybook": "2.1.0",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/react": "^5.1.11",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/react": "^5.2.1",
     "@travi/any": "2.0.4",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -65,26 +65,26 @@
     "mocha": "6.2.1",
     "npm-run-all": "4.1.5",
     "nyc": "^14.1.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-test-renderer": "^16.9.0",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "react-test-renderer": "^16.10.1",
     "remark": "^11.0.1",
     "remark-cli": "^7.0.0",
-    "rollup": "^1.19.4",
+    "rollup": "^1.22.0",
     "rollup-plugin-auto-external": "2.0.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "storybook-router": "0.3.4",
     "validate-commit-msg": "2.14.0",
-    "webpack": "^4.39.2"
+    "webpack": "^4.41.0"
   },
   "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
   "dependencies": {
-    "gatsby-link": "^2.2.5",
+    "gatsby-link": "^2.2.17",
     "glamor": "2.20.40",
     "glamorous": "5.0.0",
     "prop-types": "15.7.2",
