--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ before_deploy:
 deploy:
 - provider: script
   skip_cleanup: true
-  script: npx semantic-release
+  script: npx semantic-release@beta
+  on:
+    all_branches: true
 - provider: script
   skip_cleanup: true
   script: npm run deploy
