--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -1,3 +1,3 @@
 {
-  "presets": [["@dsmjs", {"targets": {"browser": true}, "browser": true, "react": true}]]
+  "presets": [["@dsmjs", {"targets": {"browser": true}, "react": true}]]
 }
