--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "glamor": "2.20.40",
     "glamorous": "5.0.0",
     "prop-types": "15.7.2",
-    "react-simple-icons": "^1.0.0-beta.5"
+    "react-simple-icons": "^1.0.0-beta.5",
+    "react-use": "^12.7.2"
   }
 }
