chore(homepage): updated to the netlify hosted site

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,5 +2,5 @@ _extends: .github
 repository:
   name: components
   description: React components for the dsmjs.com site
-  homepage: 'https://dsmjs.com/components/'
+  homepage: 'https://components.dsmjs.com/'
   private: false
