--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "build": "run-s clean build:*",
     "build-storybook": "build-storybook --quiet",
     "snapshot": "build-storybook && percy-storybook --widths=320,1280",
-    "predeploy": "run-s build-storybook",
-    "deploy": "gh-pages -r \"https://$GH_TOKEN@github.com/dsmjs/components.git\" -d storybook-static/",
+    "predeploy:netlify": "run-s build-storybook",
+    "deploy:netlify": "netlify deploy --dir=./public --prod",
     "prepack": "run-s build"
   },
   "config": {
@@ -64,6 +64,7 @@
     "gh-pages": "2.1.1",
     "husky": "3.1.0",
     "mocha": "6.2.2",
+    "netlify-cli": "^2.21.0",
     "npm-run-all": "4.1.5",
     "nyc": "^14.1.1",
     "react": "^16.10.2",
