ci(deploy): configured to deploy the correct storybook output

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "presnapshot": "run-s build-storybook",
     "snapshot": "percy-storybook --widths=320,1280",
     "predeploy:netlify": "run-s build-storybook",
-    "deploy:netlify": "netlify deploy --dir=./public --prod",
+    "deploy:netlify": "netlify deploy --dir=./storybook-static --prod",
     "prepack": "run-s build"
   },
   "config": {
