--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -10,3 +10,7 @@ update_configs:
       - match:
           dependency_type: "production"
           update_type: "all"
+    commit_message:
+      prefix: "fix"
+      prefix_development: "chore"
+      include_scope: true
