ci(chromatic): enabled publishing storybook to chromatic

--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "lint:js": "eslint . .storybook --cache",
     "lint:travis": "travis-lint .travis.yml",
     "tests:unit": "mocha 'src/**/*-test.js'",
-    "test": "npm-run-all --print-label --parallel lint:* --sequential coverage --parallel build build-storybook",
+    "test": "npm-run-all --print-label --parallel lint:* --sequential coverage --parallel build build:storybook",
     "coverage": "nyc run-s tests:unit",
     "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "start": "start-storybook --port 6006 --ci",
     "build:js": "rollup --config",
     "build": "run-s clean build:*",
-    "build-storybook": "build-storybook --quiet",
-    "presnapshot": "run-s build-storybook",
+    "build:storybook": "build-storybook --quiet",
+    "presnapshot": "run-s build:storybook",
     "snapshot": "percy-storybook --widths=320,1280",
-    "predeploy:netlify": "run-s build-storybook",
+    "predeploy:netlify": "run-s build:storybook",
     "deploy:netlify": "netlify deploy --dir=./storybook-static",
+    "deploy:chromatic": "npx chromatic --build-script-name=build:storybook",
     "prepack": "run-s build"
   },
   "config": {
