--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint:md": "remark --frail .",
     "lint:js": "eslint . .storybook --cache",
     "lint:travis": "travis-lint .travis.yml",
+    "lint:peer": "npm ls --production >/dev/null",
     "tests:unit": "mocha 'src/**/*-test.js'",
     "test": "npm-run-all --print-label --parallel lint:* --sequential coverage --parallel build build:storybook",
     "coverage": "nyc run-s tests:unit",
