--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.27",
-    "gatsby-link": "2.4.3",
+    "gatsby-link": "^2.4.6",
     "prop-types": "15.7.2",
     "react-simple-icons": "^1.0.0-beta.5",
     "react-use": "^15.0.0"
