ci(publish): switched from a deny-list to an allow-list
for files to include in the published package

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "lib/"
+  ],
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/register": "^7.6.2",
