--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
+    "sinon": "^9.0.2",
     "storybook-router": "0.3.4",
     "travis-lint": "^1.0.0",
     "validate-commit-msg": "2.14.0",
@@ -94,6 +95,9 @@
     "gatsby-link": "^2.4.2",
     "prop-types": "15.7.2",
     "react-simple-icons": "^1.0.0-beta.5",
-    "react-use": "^15.0.0"
+    "react-use": "^15.0.0",
+    "remark-parse": "^8.0.2",
+    "remark-react": "^7.0.1",
+    "unified": "^9.0.0"
   }
 }
