chore(husky): upgraded the config format to match the installed version

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "predeploy:netlify": "run-s build:storybook",
     "deploy:netlify": "netlify deploy --dir=./storybook-static",
     "deploy:chromatic": "npx chromatic --build-script-name=build:storybook --exit-once-uploaded",
-    "prepack": "run-s build"
+    "prepack": "run-s build",
+    "prepare": "husky install"
   },
   "config": {
     "commitizen": {
