--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -5,7 +5,7 @@ name: Node.js CI
       - master
       - alpha
       - beta
-      - 'dependabot/**'
+      - dependabot/**
   pull_request:
     types:
       - opened
@@ -19,12 +19,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Read .nvmrc
-        run: 'echo ::set-output name=NVMRC::$(cat .nvmrc)'
+        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
         id: nvm
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: '${{ steps.nvm.outputs.NVMRC }}'
+          node-version: ${{ steps.nvm.outputs.NVMRC }}
       - uses: bahmutov/npm-install@v1
       - run: npm test
   release:
@@ -33,18 +33,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Read .nvmrc
-        run: 'echo ::set-output name=NVMRC::$(cat .nvmrc)'
+        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
         id: nvm
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: '${{ steps.nvm.outputs.NVMRC }}'
+          node-version: ${{ steps.nvm.outputs.NVMRC }}
       - uses: bahmutov/npm-install@v1
       - name: semantic-release
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-          NPM_TOKEN: '${{ secrets.NPM_PUBLISH_TOKEN }}'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
   storybook:
     if: github.ref == 'refs/heads/master'
     needs: verify
@@ -52,12 +52,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Read .nvmrc
-        run: 'echo ::set-output name=NVMRC::$(cat .nvmrc)'
+        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
         id: nvm
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: '${{ steps.nvm.outputs.NVMRC }}'
+          node-version: ${{ steps.nvm.outputs.NVMRC }}
       - uses: bahmutov/npm-install@v1
       - run: npm run deploy:netlify -- --prod
         env:
