ci(coverage): report to codecov

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -27,6 +27,8 @@ jobs:
           node-version: ${{ steps.nvm.outputs.NVMRC }}
       - uses: bahmutov/npm-install@v1
       - run: npm test
+      - name: Upload coverage data to Codecov
+        run: 'npm run coverage:report'
   release:
     needs: verify
     runs-on: ubuntu-latest
